--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="img/basket.png" alt="Корзина">
                 </div>
             </nav>
-            <nav class="response">
+            <div class="response">
                 <div class="nav__logo">
                     <a href="#"><img src="img/Vector.svg" alt="Nootris"></a>
                 </div>
@@ -44,7 +44,7 @@
                     <a href="tel:8006000990" class="nav__tel">8 (800) 600-09-90</a>
                     <img src="img/basket.png" alt="Корзина">
                 </div>
-            </nav>
+            </div>
         </div>
         <div class="main__wrapper">
             <h1 class="slogan">АКТИВИРУЙ<br>
@@ -103,5 +103,7 @@
             <a href="#" class="discount__button">Оформить заказ!</a>
         </div>
     </section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
